--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         <div class="BarraDeVidaMiniCell"></div>
     </div>
     <div id="goku">
-        <div class="Personaje1"></div>
+        <div class="player"></div>
     </div>
     <div id="movG">
         <div id class="GmovUp"></div>
         <div id class="GmovDown"></div>
         <div id class="GmovRight"></div>
         <div id class="GmovLeft"></div>
-        <div id class="DisparoG"></div>
+        <div id class="projectile"></div>
     </div>
 
 
     <div id="cell">
-        <div id class="Personaje2">
+        <div id class="enemy">
         </div>
         <div id="movC">
             <div id class="CmovUp"></div>
