--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goky</title>
+    <title>GokuVSCell</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <div id="world">
+        <div class="fondo"></div>
+    </div>
+
+    <div id="vida">
+        <div class="CuadroDeVidaGoku"></div>
+        <div class="BarraVidaGoku"></div>
+        <div class="CuadroDeVidaMiniCell"></div>
+        <div class="BarraDeVidaMiniCell"></div>
+    </div>
+    <div id="goku">
+        <div class="player"></div>
+    </div>
+    <div id="movG">
+        <div id class="GmovUp"></div>
+        <div id class="GmovDown"></div>
+        <div id class="GmovRight"></div>
+        <div id class="GmovLeft"></div>
+        <div id class="projectile"></div>
+    </div>
+
+
+    <div id="cell">
+        <div id class="enemy">
+        </div>
+        <div id="movC">
+            <div id class="CmovUp"></div>
+            <div id class="CmovDown"></div>
+            <div id class="CmovRight"></div>
+            <div id class="CmovLeft"></div>
+            <div id class="DisparoC"></div>
+        </div>
+
+        <div id="resultados">
+            <div id class="victoria"></div>
+            <div id class="perder"></div>
+        </div>
+        <script src="script.js"></script>
 </body>
+
 </html>
