--- a/index.html
+++ b/index.html
@@ -11,43 +11,20 @@
 
 <body>
 
-    <div id="world">
-        <div class="fondo"></div>
-    </div>
+    <div id="player"></div>
 
-    <div id="vida">
-        <div class="CuadroDeVidaGoku"></div>
-        <div class="BarraVidaGoku"></div>
-        <div class="CuadroDeVidaMiniCell"></div>
-        <div class="BarraDeVidaMiniCell"></div>
-    </div>
-    <div id="goku">
-        <div class="player"></div>
-    </div>
-    <div id="movG">
-        <div id class="GmovUp"></div>
-        <div id class="GmovDown"></div>
-        <div id class="GmovRight"></div>
-        <div id class="GmovLeft"></div>
-        <div id class="projectile"></div>
-    </div>
+    <div id="wallpaper"></div>
+        
+    <div id="BarraDeVidaMiniCell"></div>
 
+    <div id="CuadroDeVidaMiniCell"></div>
 
-    <div id="cell">
-        <div id class="enemy">
-        </div>
-        <div id="movC">
-            <div id class="CmovUp"></div>
-            <div id class="CmovDown"></div>
-            <div id class="CmovRight"></div>
-            <div id class="CmovLeft"></div>
-            <div id class="DisparoC"></div>
-        </div>
+    <div id="enemy"></div>
 
-        <div id="resultados">
-            <div id class="victoria"></div>
-            <div id class="perder"></div>
-        </div>
+    <div id="CuadroDeVidaGoku"></div>
+
+    <div id="BarraVidaGoku"></div>
+    
         <script src="script.js"></script>
 </body>
 
