--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     <div id="CuadroDeVidaGoku"></div>
 
     <div id="BarraVidaGoku"></div>
-    
+
+    <div id="izquierda"></div>
+
+    <div id="derecha"></div>
+
+    <div id="arriba"></div>
+
+    <div id="abajo>"></div>
         <script src="script.js"></script>
 </body>
 
