--- a/index.html
+++ b/index.html
@@ -25,13 +25,8 @@
 
     <div id="BarraVidaGoku"></div>
 
-    <div id="izquierda"></div>
+    <div id="projectile"></div>
 
-    <div id="derecha"></div>
-
-    <div id="arriba"></div>
-
-    <div id="abajo>"></div>
         <script src="script.js"></script>
 </body>
 
