--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div id="BarraVidaGoku"></div>
 
-    <div id="missiles"></div>
+    <div id="kamehameha"></div>
 
         <script src="script.js"></script>
 </body>
